--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
       run: |
         cd terraform
-        terraform apply -auto-approve
+        terraform apply -auto-approve "tfplan"
 
     - name: Terraform Destroy
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'destroy' }}
@@ -75,3 +75,4 @@ jobs:
     - name: Clean Workspace
       run: |
         rm -rf terraform/.terraform lambda-functions/*/*.zip
+
