--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,10 @@ jobs:
           }
         done
 
+    - name: Print APPLY_OR_DESTROY value for debugging
+      run: |
+        echo "APPLY_OR_DESTROY value: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
+
     - name: Terraform Init
       run: |
         cd terraform
@@ -75,4 +79,3 @@ jobs:
     - name: Clean Workspace
       run: |
         rm -rf terraform/.terraform lambda-functions/*/*.zip
-
