--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,15 @@ jobs:
         cd terraform
         terraform plan -out=tfplan
 
+    - name: Check if tfplan exists
+      run: |
+        if [ ! -f terraform/tfplan ]; then
+          echo "Terraform plan file tfplan not found!"
+          exit 1
+        else
+          echo "Terraform plan file tfplan found!"
+        fi
+
     - name: Terraform Apply
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
       run: |
@@ -75,3 +84,8 @@ jobs:
       run: |
         cd terraform
         terraform destroy -auto-approve
+
+    - name: Clean Workspace
+      run: |
+        rm -rf terraform/.terraform lambda-functions/*/*.zip
+
