--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,8 @@ jobs:
     - name: Debug APPLY_OR_DESTROY value
       run: |
         echo "APPLY_OR_DESTROY value is: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
+        echo "GITHUB_EVENT_NAME is: ${{ github.event_name }}"
+        echo "GITHUB_EVENT is: ${{ toJson(github.event) }}"
 
     - name: Terraform Init
       run: |
@@ -73,6 +75,10 @@ jobs:
           echo "Terraform plan file tfplan found!"
         fi
 
+    - name: Debug Terraform Apply Step
+      run: |
+        echo "Running terraform apply with APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
+
     - name: Terraform Apply
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
       run: |
@@ -88,4 +94,3 @@ jobs:
     - name: Clean Workspace
       run: |
         rm -rf terraform/.terraform lambda-functions/*/*.zip
-
