--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,6 +78,8 @@ jobs:
     - name: Debug Terraform Apply Step
       run: |
         echo "Running terraform apply with APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
+        echo "Terraform Plan path: terraform/tfplan"
+        echo "Is tfplan file present? $(ls terraform/tfplan)"
 
     - name: Terraform Apply
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
