--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,7 +79,8 @@ jobs:
       run: |
         echo "Running terraform apply with APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
         echo "Terraform Plan path: terraform/tfplan"
-        echo "Is tfplan file present? $(ls terraform/tfplan)"
+        echo "Is tfplan file present? $(ls -lh terraform/tfplan)"
+        terraform version
 
     - name: Terraform Apply
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
