--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Install Terraform
       uses: hashicorp/setup-terraform@v1
       with:
-        terraform_version: '1.5.0'
+        terraform_version: '1.11.3'  # Latest stable version
 
     - name: Build and Upload Lambda Packages
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
@@ -75,18 +75,20 @@ jobs:
           echo "Terraform plan file tfplan found!"
         fi
 
-    - name: Debug Terraform Apply Step
+    - name: Debug before Terraform Apply
       run: |
         echo "Running terraform apply with APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
         echo "Terraform Plan path: terraform/tfplan"
         echo "Is tfplan file present? $(ls -lh terraform/tfplan)"
         terraform version
+        cat terraform/tfplan
 
     - name: Terraform Apply
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
       run: |
         cd terraform
-        terraform apply -auto-approve terraform/tfplan
+        echo "Applying Terraform plan..."
+        terraform apply -auto-approve terraform/tfplan || { echo 'Terraform apply failed'; exit 1; }
 
     - name: Terraform Destroy
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'destroy' }}
