--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,11 +87,12 @@ jobs:
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
       run: |
         cd terraform
-        echo "Applying Terraform plan..."
+        echo "Running terraform apply..."
         terraform apply -auto-approve terraform/tfplan || { echo 'Terraform apply failed'; exit 1; }
 
     - name: Terraform Destroy
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'destroy' }}
       run: |
         cd terraform
+        echo "Running terraform destroy..."
         terraform destroy -auto-approve
