--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
 
-    # Use Bash shell regardless of the runner OS
+    # Use the Bash shell regardless of the runner OS
     defaults:
       run:
         shell: bash
@@ -30,14 +30,18 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    # Set up AWS CLI with credentials (Assuming you're using GitHub secrets for AWS keys)
+    # Set up AWS CLI with credentials
     - name: Set up AWS CLI
       run: |
+        if [[ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" || -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" || -z "${{ secrets.AWS_REGION }}" ]]; then
+          echo "AWS credentials or region are missing!"
+          exit 1
+        fi
         aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws configure set region ${{ secrets.AWS_REGION }}
 
-    # Install the latest version of Terraform CLI and configure with Terraform Cloud token
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
