--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,6 +81,18 @@ jobs:
         terraform version
         ls -lh terraform/tfplan
 
+    # Debugging: Print inputs and check if the condition works correctly
+    - name: Debug Apply/Destroy Condition
+      run: |
+        echo "Condition for APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
+        if [ "${{ github.event.inputs.APPLY_OR_DESTROY }}" == "apply" ]; then
+          echo "We are going to apply Terraform."
+        elif [ "${{ github.event.inputs.APPLY_OR_DESTROY }}" == "destroy" ]; then
+          echo "We are going to destroy Terraform resources."
+        else
+          echo "Invalid value for APPLY_OR_DESTROY."
+        fi
+
     # Ensure Terraform Apply Runs for 'apply'
     - name: Terraform Apply
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
