--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Install Terraform
       uses: hashicorp/setup-terraform@v1
       with:
-        terraform_version: '1.5.0'  # Ensure you are using the correct version
+        terraform_version: '1.5.0'
 
     - name: Build and Upload Lambda Packages
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
@@ -50,11 +50,10 @@ jobs:
           }
         done
 
-    - name: Debug APPLY_OR_DESTROY value
+    - name: Debug: Print inputs
       run: |
-        echo "APPLY_OR_DESTROY value is: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
-        echo "GITHUB_EVENT_NAME is: ${{ github.event_name }}"
-        echo "GITHUB_EVENT: ${{ toJson(github.event) }}"
+        echo "APPLY_OR_DESTROY value: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
+        echo "EVENT JSON: ${{ toJson(github.event) }}"
 
     - name: Terraform Init
       run: |
@@ -84,15 +83,15 @@ jobs:
     - name: Debug Apply/Destroy Condition
       run: |
         echo "Condition for APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
-        if [ "${{ github.event.inputs.APPLY_OR_DESTROY }}" == "apply" ]; then
+        if [[ "${{ github.event.inputs.APPLY_OR_DESTROY }}" == "apply" ]]; then
           echo "We are going to apply Terraform."
-        elif [ "${{ github.event.inputs.APPLY_OR_DESTROY }}" == "destroy" ]; then
+        elif [[ "${{ github.event.inputs.APPLY_OR_DESTROY }}" == "destroy" ]]; then
           echo "We are going to destroy Terraform resources."
         else
           echo "Invalid value for APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
+          exit 1
         fi
 
-    # Ensure Terraform Apply Runs for 'apply'
     - name: Terraform Apply
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
       run: |
@@ -100,7 +99,6 @@ jobs:
         echo "Applying Terraform Plan..."
         terraform apply -auto-approve terraform/tfplan || { echo 'Terraform apply failed'; exit 1; }
 
-    # Ensure Terraform Destroy Runs for 'destroy'
     - name: Terraform Destroy
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'destroy' }}
       run: |
