--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Install Terraform
       uses: hashicorp/setup-terraform@v1
       with:
-        terraform_version: '1.5.0'
+        terraform_version: '1.5.0'  # Upgraded to the latest stable version
 
     - name: Build and Upload Lambda Packages
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
@@ -50,10 +50,11 @@ jobs:
           }
         done
 
-    - name: Debug: Print inputs
+    - name: Debug APPLY_OR_DESTROY value
       run: |
-        echo "APPLY_OR_DESTROY value: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
-        echo "EVENT JSON: ${{ toJson(github.event) }}"
+        echo "APPLY_OR_DESTROY value is: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
+        echo "GITHUB_EVENT_NAME is: ${{ github.event_name }}"
+        echo "GITHUB_EVENT is: ${{ toJson(github.event) }}"
 
     - name: Terraform Init
       run: |
@@ -74,34 +75,24 @@ jobs:
           echo "Terraform plan file tfplan found!"
         fi
 
-    - name: Debug before Terraform Apply/Destroy
+    - name: Debug before Terraform Apply
       run: |
-        echo "Running terraform apply/destroy with APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
+        echo "Running terraform apply with APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
+        echo "Terraform Plan path: terraform/tfplan"
+        echo "Is tfplan file present? $(ls -lh terraform/tfplan)"
         terraform version
-        ls -lh terraform/tfplan
-
-    - name: Debug Apply/Destroy Condition
-      run: |
-        echo "Condition for APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
-        if [[ "${{ github.event.inputs.APPLY_OR_DESTROY }}" == "apply" ]]; then
-          echo "We are going to apply Terraform."
-        elif [[ "${{ github.event.inputs.APPLY_OR_DESTROY }}" == "destroy" ]]; then
-          echo "We are going to destroy Terraform resources."
-        else
-          echo "Invalid value for APPLY_OR_DESTROY: ${{ github.event.inputs.APPLY_OR_DESTROY }}"
-          exit 1
-        fi
+        cat terraform/tfplan
 
     - name: Terraform Apply
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'apply' }}
       run: |
         cd terraform
-        echo "Applying Terraform Plan..."
+        echo "Running terraform apply..."
         terraform apply -auto-approve terraform/tfplan || { echo 'Terraform apply failed'; exit 1; }
 
     - name: Terraform Destroy
       if: ${{ github.event.inputs.APPLY_OR_DESTROY == 'destroy' }}
       run: |
         cd terraform
-        echo "Destroying Terraform Resources..."
+        echo "Running terraform destroy..."
         terraform destroy -auto-approve
