--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,10 @@ jobs:
       LAMBDA_FUNCTIONS: lambda1,lambda2,lambda3
 
     steps:
-      - name: Checkout code
+      - name: Checkout code with full history
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -33,37 +35,28 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Build and Upload Changed Lambda Packages
+      - name: Detect and build changed Lambda packages
         if: ${{ github.event.inputs.action == 'apply' }}
         run: |
+          set -e
           echo "🔍 Detecting changed Lambda functions..."
 
-          # Get changed files between HEAD and HEAD~1 or all files if no HEAD~1
-          if git rev-parse HEAD~1 >/dev/null 2>&1; then
-            CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD)
-          else
-            echo "⚠️ No previous commit found. Assuming all Lambdas changed."
-            CHANGED_FILES=$(git ls-files)
-          fi
-
+          CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD)
           echo "Changed files:"
           echo "$CHANGED_FILES"
 
           IFS=',' read -ra LAMBDAS <<< "$LAMBDA_FUNCTIONS"
-
           for lambda in "${LAMBDAS[@]}"; do
-            if echo "$CHANGED_FILES" | grep -q "^lambda-functions/${lambda}/"; then
+            if echo "$CHANGED_FILES" | grep -q "lambda-functions/${lambda}/"; then
               echo "📦 Changes detected for ${lambda}, building and uploading..."
-              chmod +x lambda-functions/${lambda}/build.sh
               bash lambda-functions/${lambda}/build.sh
-              echo "☁️ Uploading ${lambda}/package.zip to S3..."
               aws s3 cp lambda-functions/${lambda}/package.zip s3://$S3_BUCKET/lambda-packages/${lambda}/package.zip
             else
-              echo "✅ No changes in ${lambda}, skipping build and upload."
+              echo "✅ No changes detected for ${lambda}, skipping."
             fi
           done
 
-      - name: Setup Terraform
+      - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
 
       - name: Terraform Init
